# fluvio-client-swift

./: .gitignore  Cargo.toml  FluvioClientSwift.podspec  README.md  build-rust.sh  build.rs
.github/workflows/: ci.yml  release.yml
FluvioClientSwift/: .gitignore  RustXcframework.xcframework
FluvioClientSwiftExample/FluvioClientSwiftExample.xcodeproj/: project.pbxproj
FluvioClientSwiftExample/Shared/: ContentView.swift  FluvioClientSwiftExampleApp.swift
FluvioClientSwiftExample/Tests iOS/: Tests_iOS.swift  Tests_iOSLaunchTests.swift
FluvioClientSwiftExample/Tests macOS/: Tests_macOS.swift  Tests_macOSLaunchTests.swift
src/: lib.rs
