[package]
name = "fluvio-client-swift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = "0.1"
fluvio = "*"
fluvio-future = { version = "0.3.15", features = ["task", "io"] }
