[package]
name = "fluvio-client-swift"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = "0.1.29"
fluvio = "0.12.8"
fluvio-future = { version = "0.3.15", features = ["task", "io"] }

[patch.crates-io]
openssl-src = { git = 'https://github.com/nacardin/openssl-src-rs' }

[profile.release]
lto = "thin"